--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Full-stack chat application",
   "scripts": {
-    "postinstall": "npm install --prefix backend && npm install --prefix frontend",
-  "build": "npm run build --prefix frontend",
-  "start": "npm run start --prefix backend"
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+    "build": "npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "license": "ISC"
 }
