--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "Full-stack chat application",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "install-all": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
-  },
-  "engines": {
-    "node": "18.x"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "commonjs"
 }
