--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "express-static-gzip": "^5.1.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
